<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rick and Morty API Viewer</string>
    <string name="contentDescription" translatable="false">contentDescription</string>
    <string name="contentDescriptionShort" translatable="false">CDS</string>
    <string name="contentDescriptionLong" translatable="false">contentDescriptioncontentDescriptioncontentDescriptioncontentDescriptioncontentDescriptioncontentDescription</string>

    <!--    Content Descriptions-->
    <string name="content_description_footer_location" translatable="false">Show Location Cards</string>
    <string name="content_description_footer_character" translatable="false">Show Character Cards</string>
    <string name="content_description_footer_episode" translatable="false">Show Episode Cards</string>
    <string name="content_description_RV_location" translatable="false">Location Cards</string>
    <string name="content_description_RV_character" translatable="false">Character Cards</string>
    <string name="content_description_RV_episode" translatable="false">Episode Cards</string>
    <string name="content_description_footer_menu" translatable="false">Footer Menu</string>
    <string name="content_description_background" translatable="false">Background</string>
    <string name="content_description_ad" translatable="false">Ads</string>
    <string name="content_description_title" translatable="false">Main Title</string>
    <string name="content_description_menu" translatable="false">Options Menu</string>
    <string name="content_description_menu_policy" translatable="false">Open Policy</string>
    <string name="content_description_menu_rate" translatable="false">Open Rate My App</string>
    <string name="content_description_menu_about" translatable="false">Open About This App</string>
    <string name="content_description_author_email" translatable="false">Send Email To App Author</string>
    <string name="content_description_author_powered" translatable="false">Open Website Of Data Provider</string>
    <string name="content_description_author_picture" translatable="false">Author Picture</string>
    <string name="content_description_loading_arrow" translatable="false">Loading Arrow</string>
    <string name="content_description_character_picture" translatable="false">Character Picture</string>
    <string name="content_description_location_picture" translatable="false">Location Picture</string>
    <string name="content_description_episode_picture" translatable="false">Episode Picture</string>

<!--    todo: add multilingual support to content descriptions-->

    <!--    Menu-->
    <string name="item_policy">Privacy Policy</string>
    <string name="item_policy_page" translatable="false">https://docs.google.com/document/d/1jO9nnmsjG2ZO0Si1rEBTAP2kmTin5h-qIb4nhuAN5H0/edit?usp=sharing</string>
    <string name="item_rate">Rate this app</string>
    <string name="item_about">About</string>
    <string name="item_rate_success">Thanks for your review</string>
    <string name="item_rate_fail">Error rating this app</string>

    <!--    Ads View-->
    <string name="ads_banner" translatable="false">ca-app-pub-2321980263900338/6473499035</string>
    <string name="ads_interstitial" translatable="false">ca-app-pub-2321980263900338/6349375955</string>

    <!--    Author Menu-->
    <string name="authorName1" translatable="false">Julio César Alberto</string>
    <string name="authorName2" translatable="false">León Anhuamán</string>
    <string name="authorProfession" translatable="false">Android Developer - UI/UX Designer</string>
    <string name="authorEmail" translatable="false">julioleon2004@gmail.com</string>
    <string name="authorEmailBody">Write your comment here</string>
    <string name="authorEmailSubject">User Comment</string>
    <string name="authorEmailChooser">Send email to this author using:</string>
    <string name="authorPhone" translatable="false">+58 (424) 225.92.20</string>
    <string name="poweredBy">Supported by:</string>
    <string name="poweredByName" translatable="false">rickandmortyapi.com</string>
    <string name="poweredByUrl" translatable="false">https://rickandmortyapi.com</string>

    <!--    Character Detail-->
    <string name="idLabel">ID:</string>
    <string name="nameLabel">NAME:</string>
    <string name="statusLabel">STATUS:</string>
    <string name="specieLabel">SPECIE:</string>
    <string name="typeLabel">TYPE:</string>
    <string name="genderLabel">GENDER:</string>
    <string name="originLabel">ORIGIN:</string>
    <string name="locationLabel">LOCATION:</string>
    <string name="episodesLabel">EPISODES:</string>

    <!--    Location Detail-->
    <string name="dimensionLabel">DIMENSION:</string>
    <string name="residentsLabel">RESIDENTS:</string>

    <!--    Episode Detail-->
    <string name="airDateLabel">AIR DATE:</string>
    <string name="episodeLabel">EPISODE:</string>
    <string name="charactersLabel">CHARACTERS:</string>

    <!--    Feedback to User-->
    <string name="loadingFail">Exception during loading</string>
    <string name="characterPageFail">Character Page Can\'t be loaded</string>
    <string name="locationPageFail">Location Page Can\'t be loaded</string>
    <string name="episodePageFail">Episode Page Can\'t be loaded</string>
</resources>