<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="8dp"
    android:clipChildren="true"
    android:contentDescription="@string/content_description_RV_character"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/view1"
            style="@style/characterCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/characterImage"
            app:layout_constraintEnd_toEndOf="@+id/characterImage"
            app:layout_constraintStart_toStartOf="@id/characterImage"
            app:layout_constraintTop_toTopOf="@id/characterName"
            app:layout_constraintVertical_bias="1" />

        <View
            android:id="@+id/view2"
            style="@style/characterCardViewNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/characterId"
            app:layout_constraintEnd_toEndOf="@+id/characterId"
            app:layout_constraintStart_toStartOf="@+id/characterId"
            app:layout_constraintTop_toTopOf="@+id/characterId"
            app:layout_constraintVertical_bias="1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".70" />

        <TextView
            android:id="@+id/characterName"
            style="@style/characterCardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="@+id/characterImage"
            app:layout_constraintEnd_toEndOf="@+id/characterImage"
            app:layout_constraintStart_toStartOf="@+id/characterImage" />

        <TextView
            android:id="@+id/characterId"
            style="@style/characterCardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contentDescriptionShort"
            app:layout_constraintBottom_toTopOf="@+id/characterName"
            app:layout_constraintEnd_toEndOf="@+id/characterImage"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>