<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.LocationActivity">

    <ImageView
        android:id="@+id/mainBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contentDescription"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <FrameLayout
        android:id="@+id/adViewLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/locationImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location_color"
        tools:srcCompat="@drawable/ic_location_color" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layerType="software"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/adViewLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationImageView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/locationIdLabel"
                    style="@style/characterDetailLabelTop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_label_size"
                    android:text="@string/contentDescriptionShort" />

                <TextView
                    android:id="@+id/locationIdData"
                    style="@style/characterDetailTop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_content_size"
                    android:text="@string/contentDescription" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/locationNameLabel"
                    style="@style/characterDetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_label_size"
                    android:text="@string/contentDescriptionShort" />

                <TextView
                    android:id="@+id/locationNameData"
                    style="@style/characterDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_content_size"
                    android:text="@string/contentDescription" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/locationTypeLabel"
                    style="@style/characterDetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_label_size"
                    android:text="@string/contentDescriptionShort" />

                <TextView
                    android:id="@+id/locationTypeData"
                    style="@style/characterDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_content_size"
                    android:text="@string/contentDescription" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/locationDimensionLabel"
                    style="@style/characterDetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_label_size"
                    android:text="@string/contentDescriptionShort" />

                <TextView
                    android:id="@+id/locationDimensionData"
                    style="@style/characterDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_content_size"
                    android:text="@string/contentDescription" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/locationCharactersLabel"
                    style="@style/characterDetailLabelBottom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_label_size"
                    android:text="@string/contentDescriptionShort" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/table_content_size">

                    <LinearLayout
                        android:id="@+id/locationCharactersDataList"
                        style="@style/characterDetailBottom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/locationCharactersData"
                        style="@style/characterDetailBottom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/contentDescription"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/loadingLoc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toBottomOf="@id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_loading_circles" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/author"
        style="@style/authorBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/adViewLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/authorId"
            style="@style/authorCardBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3">

            <ImageView
                android:id="@+id/imageView"
                style="@style/authorImageView"
                android:contentDescription="@string/contentDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/authorTextView1"
                    style="@style/authorTextView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/authorName1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/authorTextView2"
                    style="@style/authorTextView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/authorName2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/authorTextView1" />

                <TextView
                    android:id="@+id/authorTextView3"
                    style="@style/authorTextView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/authorProfession"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorTextView2" />

                <TextView
                    android:id="@+id/authorTextView4"
                    style="@style/authorTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorTextView3" />

                <TextView
                    android:id="@+id/authorTextView5"
                    style="@style/authorTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorPhone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorTextView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/poweredId"
            style="@style/authorCardBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorId"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/authorTextView6"
                style="@style/authorTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poweredBy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/authorTextView7"
                style="@style/authorTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poweredByName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorTextView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>